--- a/gb/nf3046_4.md
+++ b/gb/nf3046_4.md
@@ -13,7 +13,6 @@
 <tr><td><h3><a href="https://github.com/hxrfvz257/djy/blob/master/gb/19/8/7/n11436959.md#1" target="_blank">一位中国老太在欧洲不平凡的20年（下）</a><br></h3><a href="https://github.com/hxrfvz257/djy/blob/master/gb/19/8/7/n11436959.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/08/f04334acc2f7f6640bab6c1a76a7987b-150x120.jpg" align ="left"></a>瑞士伯尔尼法轮功学员潘淑珍在卢塞恩景点劝中国游客三退的故事。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年08月23日 12:36 PM							</td></tr>
 <tr><td><h3><a href="https://github.com/hxrfvz257/djy/blob/master/gb/19/8/13/n11449390.md#1" target="_blank">网民白宫请愿连署：将中共定为恐怖组织</a><br></h3><a href="https://github.com/hxrfvz257/djy/blob/master/gb/19/8/13/n11449390.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/08/CCP-150x120.jpg" align ="left"></a>有鉴于香港局势恶化、港警暴力升级，有民众在美国白宫请愿网站“我们人民”（We the People）发起征签活动，要求美国政府正式将幕后黑手中国共产党定为恐怖组织。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年08月20日 1:00 AM							</td></tr>
 <tr><td><h3><a href="https://github.com/hxrfvz257/djy/blob/master/gb/19/8/13/n11450650.md#1" target="_blank">白宫请愿连署  将中共定为恐怖组织</a><br></h3><a href="https://github.com/hxrfvz257/djy/blob/master/gb/19/8/13/n11450650.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/08/9ca38853a9d3c7fedfdac1e3ab308a9e-150x120.png" align ="left"></a>有鉴于香港局势恶化、港警暴力升级，有民众在美国白宫请愿网站“我们人民”（We the People）发起征签活动，要求美国政府正式将幕后黑手中国共产党定为恐怖组织。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年08月20日 12:30 AM							</td></tr>
-<tr><td><h3><a href="https://github.com/hxrfvz257/djy/blob/master/gb/19/9/16/n11524267.md#1" target="_blank">每日三退声明精选（2019/09/15）</a><br></h3>我是一名新疆人，了解中共利用集中营等方式对新疆人的严重迫害情况。通过了解真相，我也知道了中共对法轮功的残酷迫害，其中活摘器官就是其残忍的迫害手段之一。一直以来中共都在利用着各种政治运动迫害中国人，在思想意识上进行强化洗脑教育，摧残和毁灭他们的灵魂和肉体，手段极为残忍、邪恶，纵观这段历史，这个邪党对中国人所犯下的滔天罪恶，真是罄竹难书。由此可见中共不仅仅是一个.........<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年09月16日 11:36 AM							</td></tr>
 <tr><td><h3><a href="https://github.com/hxrfvz257/djy/blob/master/gb/19/9/13/n11519642.md#1" target="_blank">每日三退声明精选（2019/09/13）</a><br></h3>我父亲的钢厂已被共匪拿走，明真相，今天我，郝亮丽（化名）声明退出中共共青团、少先队，特此证明。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年09月14日 12:37 AM							</td></tr>
 <tr><td><h3><a href="https://github.com/hxrfvz257/djy/blob/master/gb/19/9/13/n11518121.md#1" target="_blank">每日三退声明精选（2019/09/12）</a><br></h3>我是几十年的中共党员，看见现在大陆无官不贪，官民待遇极不公平，对这个党看清了！而且我相信佛在心中，所以也要退出这个无神论的组织。特让我女儿帮我退出我加入过的党团队组织。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年09月13日 10:36 AM							</td></tr>
 <tr><td><h3><a href="https://github.com/hxrfvz257/djy/blob/master/gb/19/9/11/n11513087.md#1" target="_blank">每日三退声明精选（2019/09/10）</a><br></h3>我有六十多年的党龄，共产党打黑是越打越黑，那些党员都是用钱买来的，和居委会是一伙的，现在还是好人受欺压，我声明退出共产党的一切组织。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年09月11日 11:34 AM							</td></tr>
@@ -40,5 +39,6 @@
 <tr><td><h3><a href="https://github.com/hxrfvz257/djy/blob/master/gb/19/8/14/n11451801.md#1" target="_blank">每日三退声明精选（2019/08/13）</a><br></h3>家里三代人受共产党迫害，两代祖辈走眼为共产党服务，得一时荣光，终惨遭毒手不得善终，被杀人者所谓“平反”简直是天大笑话和耻辱；父辈作为“黑崽子”在阴影下长大，受共党洗脑而怒魔上身，其中亦有天赋异禀得志者移民香港，待到年老时却仍然难逃魔掌；我辈从小便知共党之淫邪，却未能在求学路上经受住师长劝说而误入歧途，乃人生一大黑点，幸而内心从未跟随始终保持距离。本人在王立军.........<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年08月14日 11:32 AM							</td></tr>
 <tr><td><h3><a href="https://github.com/hxrfvz257/djy/blob/master/gb/19/8/13/n11449414.md#1" target="_blank">每日三退声明精选（2019/08/12）</a><br></h3>罪恶的中共，安排黑恶势力假扮香港民众，打砸烧，录成视频回国在各大视频网站播放，评论无一不是毛左评论，均支持中共武力镇压。中共在深圳集结坦克，意在屠杀我香港同胞，可惜我香港同胞没有武装，以血肉之躯对抗坦克子弹，极是痛心，三反五反，十年文革，六四学潮，西藏问题，迫害法轮功，新疆改造营，无一不是中共一手制造的，面对如此邪恶组织，我宣誓三退，永远退出此邪恶组织。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年08月13日 12:31 PM							</td></tr>
 <tr><td><h3><a href="https://github.com/hxrfvz257/djy/blob/master/gb/19/8/12/n11447869.md#1" target="_blank">每日三退声明精选（2019/08/11）</a><br></h3>这些天在海外出差，看到香港的很多情况，也通过海外的互联网，包括《九评》和《共产主义的终极目的》看到了中共一直想掩藏的很多历史真相，包括其意识形态背后的撒旦黑教根源，中共历史上的通敌罪行，以及背后的仇恨和挑动仇恨。想起年轻的时候自己被欺骗过的事儿，就很难受，不想再提。我是信奉基督的，就在这里趁这个机会退出中共党团队。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年08月12日 6:39 PM							</td></tr>
+<tr><td><h3><a href="https://github.com/hxrfvz257/djy/blob/master/gb/19/8/10/n11443607.md#1" target="_blank">每日三退声明精选（2019/08/09）</a><br></h3>香港人民如火如荼的反送中民主运动，令我敬佩；经常听到法轮功修炼者的善行，不畏恶党残酷迫害而坚持信仰；更令我敬佩；我支持香港人民争取民主与中共恶党抗争；支持给人类带来幸福美好的法轮功。中共恶党是人类文明的敌人，我声明退出邪恶的中共团队组织。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年08月10日 10:08 AM							</td></tr>
 <tr><td><h3><a href="https://github.com/hxrfvz257/djy/blob/master/gb/nf3046_3.md#1">上一页</a>&nbsp;&nbsp;<a href="https://github.com/hxrfvz257/djy/blob/master/gb/nf3046.md#1">1</a>&nbsp;&nbsp;<a href="https://github.com/hxrfvz257/djy/blob/master/gb/nf3046_2.md#1">2</a>&nbsp;&nbsp;<a href="https://github.com/hxrfvz257/djy/blob/master/gb/nf3046_3.md#1">3</a>&nbsp;&nbsp;4&nbsp;&nbsp;<a href="https://github.com/hxrfvz257/djy/blob/master/gb/nf3046_5.md#1">5</a>&nbsp;&nbsp;<a href="https://github.com/hxrfvz257/djy/blob/master/gb/nf3046_6.md#1">6</a>&nbsp;&nbsp;<a href="https://github.com/hxrfvz257/djy/blob/master/gb/nf3046_7.md#1">7</a>&nbsp;&nbsp;<a href="https://github.com/hxrfvz257/djy/blob/master/gb/nf3046_8.md#1">8</a>&nbsp;&nbsp;<a href="https://github.com/hxrfvz257/djy/blob/master/gb/nf3046_9.md#1">9</a>&nbsp;&nbsp;<a href="https://github.com/hxrfvz257/djy/blob/master/gb/nf3046_10.md#1">10</a>&nbsp;&nbsp;<a href="https://github.com/hxrfvz257/djy/blob/master/gb/nf3046_5.md#1">下一页</a></h3></td></tr>
 </table><h4>手机上长按并复制下列链接或二维码分享本文章：</h4>https://github.com/hxrfvz257/djy/blob/master/gb/nf3046_4.md#1<br><a href="https://github.com/hxrfvz257/djy/blob/master/gb/nf3046_4.md#1"><img src="http://d1p1.ip.zn2.us/v.php?action=qrcode&url=https://github.com/hxrfvz257/djy/blob/master/gb/nf3046_4.md%231" title="分享本文章"></a><br>原文地址： <a href="http://www.epochtimes.com/gb/nf3046_4.htm">http://www.epochtimes.com/gb/nf3046_4.htm</a>    （国内需<a href="https://git.io/JesJV">下载翻墙软件</a>才能访问）</p>
