--- a/gb/news2007.md
+++ b/gb/news2007.md
@@ -47,7 +47,7 @@
 <tr><td><h3><a href="https://github.com/hxrfvz257/djy/blob/master/gb/19/12/19/n11733028.md#1" target="_blank">以世运占星学解析中共政权的出生盘</a><br></h3><a href="https://github.com/hxrfvz257/djy/blob/master/gb/19/12/19/n11733028.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/09/1-179-1-150x120.jpg" align ="left"></a>世运占星学（Mundane astrology）是关于太阳、月亮和行星的位置变化对世界事件的影响的研究。最好使用国家的出生盘来进行分析和预测。中共国于1949年10月1日15:01分在北京宣布成立，于是从中共国的出生盘就可以准确地判断这个国家的性质、发展趋势以及结局，因为在每一个出生盘上都有第八宫的宫头和第八宫内的行星.........<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月20日 2:11 AM			</td></tr>
 <tr><td><h3><a href="https://github.com/hxrfvz257/djy/blob/master/gb/19/12/19/n11733041.md#1" target="_blank">许其正：海港</a><br></h3><a href="https://github.com/hxrfvz257/djy/blob/master/gb/19/12/19/n11733041.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2018/09/dc8e41159437f699689a2b43dd28d65b-150x120.jpg" align ="left"></a> 像终日奔波疲惫不堪的工作者回到了家，船回到了海港。  像浪迹天涯饱受风霜的游子投向慈母的怀抱，船投向了海港。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月20日 12:12 AM			</td></tr>
 <tr><td><h3><a href="https://github.com/hxrfvz257/djy/blob/master/gb/19/12/19/n11732870.md#1" target="_blank">台湾古典诗：小诸城枫红</a><br></h3><a href="https://github.com/hxrfvz257/djy/blob/master/gb/19/12/19/n11732870.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/ff3360b0205e089d1d575b36e60d1dd2-150x120.jpg" align ="left"></a> 黑门桥畔满山枫，夹道缤纷璨碧空； 霜染千林疑梦境，余霞不尽夕阳红。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月19日 11:06 PM			</td></tr>
-<tr><td><h3><a href="https://github.com/hxrfvz257/djy/blob/master/gb/19/12/11/n11714906.md#1" target="_blank">“天下法书第一”王羲之《快雪时晴帖》的意趣</a><br></h3><a href="https://github.com/hxrfvz257/djy/blob/master/gb/19/12/11/n11714906.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/8d0d227953a1cfe6376682757331fe0a-150x120.jpg" align ="left"></a>《快雪时晴帖》是一封非常简短的行书体书信 ，由王羲之写给淮阴的张姓朋友。表现了什么美感和人生意境？历代受到什么赞美？......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月19日 10:53 PM			</td></tr>
+<tr><td><h3><a href="https://github.com/hxrfvz257/djy/blob/master/gb/19/12/22/n11738831.md#1" target="_blank">调笑令．冬至</a><br></h3> 飘雪， 飘雪， 数九寒天冬月。 温馨和睦家人， 饺子端来暖心。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月22日 10:51 PM			</td></tr>
 <tr><td><h3><a href="https://github.com/hxrfvz257/djy/blob/master/gb/19/12/22/n11738828.md#1" target="_blank">五律：诗（三）</a><br></h3>银河倾九万，白发振三千。 望远登台赋，悲秋作客篇。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月22日 10:43 PM			</td></tr>
 <tr><td><h3><a href="https://github.com/hxrfvz257/djy/blob/master/gb/19/12/22/n11738825.md#1" target="_blank">诗歌：除旧迎新</a><br></h3> 瑞雪纷飞鼠岁临， 红楼晃荡瞬间倾。 魔销神现人归正， 万物更新永世兴。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月22日 10:39 PM			</td></tr>
 <tr><td><h3><a href="https://github.com/hxrfvz257/djy/blob/master/gb/19/12/21/n11737381.md#1" target="_blank">诗歌：谁是我，我是谁？</a><br></h3> 死死生生复轮回，千诘百问我是谁？ 谁是我？我是谁？历史车轮滚滚推。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月21日 11:26 PM			</td></tr>
