--- a/gb/ncid282_2.md
+++ b/gb/ncid282_2.md
@@ -16,11 +16,7 @@
 <tr><td><h3><a href="https://github.com/synhl2788/djy/blob/master/gb/19/12/16/n11725212.md#1" target="_blank">天津权健董事长束昱辉等12人一审开庭</a><br></h3><a href="https://github.com/synhl2788/djy/blob/master/gb/19/12/16/n11725212.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/01/quanjian-150x120.jpg" align ="left"></a>12月16日，天津权健自然医学科技发展有限公司（下称权健集团）董事长束昱辉等12人组织、领导传销活动一案开审，被告均当庭表示认罪。此案择期宣判。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月16日 5:20 PM							</td></tr>
 <tr><td><h3><a href="https://github.com/synhl2788/djy/blob/master/gb/19/12/15/n11724466.md#1" target="_blank">晒温馨合照为父亲庆生 黎姿获赞孝顺女儿</a><br></h3><a href="https://github.com/synhl2788/djy/blob/master/gb/19/12/15/n11724466.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2017/01/170109232642100615-150x120.jpg" align ="left"></a>今年48岁的黎姿（黎珈而），每年都为父母庆祝生日。12月15日晚，她在facebook 晒出家人的一组合照为父亲庆生，画面十分温馨。看到82岁的黎爸儿孙绕膝，享受天伦之乐，许多网友大赞黎姿是“孝顺女儿”。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月16日 9:10 AM							</td></tr>
 <tr><td><h3><a href="https://github.com/synhl2788/djy/blob/master/gb/19/12/15/n11724316.md#1" target="_blank">广东物业停电梯逼居民缴费 老人爬9楼猝死</a><br></h3><a href="https://github.com/synhl2788/djy/blob/master/gb/19/12/15/n11724316.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/20191213144123_65040-150x120.png" align ="left"></a>为逼部分拖欠物业费的业主交钱，广东阳春一小区电梯被物业关停，六旬老人爬楼梯时猝死。医务人员被迫爬9楼，错过了抢救黄金时间。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月16日 1:14 AM							</td></tr>
-<tr><td><h3><a href="https://github.com/synhl2788/djy/blob/master/gb/19/12/19/n11731537.md#1" target="_blank">上海3家乐高中心关停 或面临倒闭潮</a><br></h3>外滩、瑞虹、金桥三家上海乐高活动中心“关停”的消息持续发酵。上百名购买了课程的家长呼喊维权。由于乐高集团已在10月取消中国经销商西觅亚的授权，未来可能还有150家乐高活动中心面临倒闭。
-
-微信公众号“蓝魔方少儿”发文称，乐高活动中心上海外滩店、金桥店和瑞虹店16日大门紧闭，门上贴着“闭店声明”，而门市所留的联络方式也打不通，令许多家长大感错愕。
-
-澎.........<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月19日 12:29 PM							</td></tr>
+<tr><td><h3><a href="https://github.com/synhl2788/djy/blob/master/gb/19/12/14/n11723156.md#1" target="_blank">腹泻发烧 吉林数十小学生疑感染诺如病毒</a><br></h3><a href="https://github.com/synhl2788/djy/blob/master/gb/19/12/14/n11723156.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2016/01/1412270457252120-150x120.jpg" align ="left"></a>吉林省吉林市第二实验小学有数十名学生，周五（13日）晚先后出现恶心、呕吐、腹痛腹泻、发热等症状，已初步排除食物中毒，经现场流行病学调查为疑似诺如病毒感染。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月15日 8:04 AM							</td></tr>
 <tr><td><h3><a href="https://github.com/synhl2788/djy/blob/master/gb/19/12/19/n11731789.md#1" target="_blank">每日三退声明精选（2019/12/18）</a><br></h3>共产党的两大法宝就是笔杆子和枪杆子，笔杆子是用来骗人的同时用其歪理邪说对人进行毒害洗脑。枪杆子是用来杀人和维持其邪恶统治的。现在又多了一个钱袋子用来收买和腐蚀人。这就是共产邪党的主要伎俩。其所作所为充分证明其就是一个黑帮邪教。我们声明退出这个邪党，不与邪恶为伍。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月19日 11:35 AM							</td></tr>
 <tr><td><h3><a href="https://github.com/synhl2788/djy/blob/master/gb/19/12/18/n11730296.md#1" target="_blank">瑞典环保少女晒德国坐车照 引发争议</a><br></h3>瑞典环保少女格雷塔日前搭火车回家时公布了一张她坐在火车地上的照片，结果却引发德国网民对虚伪与诚实的热烈讨论，连德国顶级政治人物都发表了意见。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月19日 12:30 AM							</td></tr>
 <tr><td><h3><a href="https://github.com/synhl2788/djy/blob/master/gb/19/12/18/n11729514.md#1" target="_blank">每日三退声明精选（2019/12/17）</a><br></h3>我是律师，常常为捍卫公民权力利益与中共邪党暴政法官党徒发生冲突，时间长了，也认识到中共法律对公民残暴打击的邪恶性质。我崇尚民主、道德、公正、独立的法律制度，声明退出中国共产党。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月18日 12:23 PM							</td></tr>
