--- a/gb/ncid278_3.md
+++ b/gb/ncid278_3.md
@@ -32,6 +32,6 @@
 <tr><td><h3><a href="https://github.com/synhl2788/djy/blob/master/gb/19/12/11/n11714779.md#1" target="_blank">被限制出境 陈秋实：政权会更迭 天快亮了</a><br></h3><a href="https://github.com/synhl2788/djy/blob/master/gb/19/12/11/n11714779.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/08/11-38-150x120.jpg" align ="left"></a>12月10日，曾“肉身翻墙”到香港记录反送中活动的大陆律师陈秋实，被天津公安局限制出境。陈秋实告诉自己：不要气馁，天快亮了。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月11日 12:15 PM							</td></tr>
 <tr><td><h3><a href="https://github.com/synhl2788/djy/blob/master/gb/19/12/8/n11708713.md#1" target="_blank">揭内蒙古莫旗看守所恶行 酷刑迫害法轮功</a><br></h3><a href="https://github.com/synhl2788/djy/blob/master/gb/19/12/8/n11708713.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/2010-9-26-featurephotos-64_fLC3ND3-150x120.jpg" align ="left"></a>从1999年7月20日，中共和江泽民集团相互利用迫害法轮功以来，莫力达瓦旗（简称莫旗）看守所上至所长，下至狱警，积极参与迫害法轮功学员，使用的酷刑手段极其残忍。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月11日 11:32 AM							</td></tr>
 <tr><td><h3><a href="https://github.com/synhl2788/djy/blob/master/gb/19/12/10/n11713990.md#1" target="_blank">【思想领袖】专访邵岚：再揭港警性暴力</a><br></h3><a href="https://github.com/synhl2788/djy/blob/master/gb/19/12/10/n11713990.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/06/3019-06-1810.56-150x120.jpg" align ="left"></a>邵岚再次揭露了港警的性暴力及无人道行为。而北京当局多次力挺港警，使香港局势恶化。她认为，中共非常害怕这些保护人权及自由民主的思想传到中国大陆，从而压制各种民主运动。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月11日 10:37 AM							</td></tr>
-<tr><td><h3><a href="https://github.com/synhl2788/djy/blob/master/gb/19/12/10/n11713536.md#1" target="_blank">淄博公安局张南分局前610主任罗忠被举报</a><br></h3>山东淄博市公安局张南分局前“610”主任罗忠直接参与迫害当地至少几十名法轮功学员，现被举报到明慧网。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月11日 7:03 AM							</td></tr>
+<tr><td><h3><a href="https://github.com/synhl2788/djy/blob/master/gb/19/12/13/n11721169.md#1" target="_blank">【珍言真语】专访刘慧卿：林郑是千古罪人</a><br></h3>香港动荡6个月了。前立法会议员、民主党主席刘慧卿认为，这都是林郑月娥造成的。希望中央政府诺守“中英联合声明”与《基本法》。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月14日 3:56 AM							</td></tr>
 <tr><td><h3><a href="https://github.com/synhl2788/djy/blob/master/gb/ncid278_2.md#1">上一页</a>&nbsp;&nbsp;<a href="https://github.com/synhl2788/djy/blob/master/gb/ncid278.md#1">1</a>&nbsp;&nbsp;<a href="https://github.com/synhl2788/djy/blob/master/gb/ncid278_2.md#1">2</a>&nbsp;&nbsp;3&nbsp;&nbsp;<a href="https://github.com/synhl2788/djy/blob/master/gb/ncid278_4.md#1">4</a>&nbsp;&nbsp;<a href="https://github.com/synhl2788/djy/blob/master/gb/ncid278_5.md#1">5</a>&nbsp;&nbsp;<a href="https://github.com/synhl2788/djy/blob/master/gb/ncid278_6.md#1">6</a>&nbsp;&nbsp;<a href="https://github.com/synhl2788/djy/blob/master/gb/ncid278_7.md#1">7</a>&nbsp;&nbsp;<a href="https://github.com/synhl2788/djy/blob/master/gb/ncid278_8.md#1">8</a>&nbsp;&nbsp;<a href="https://github.com/synhl2788/djy/blob/master/gb/ncid278_9.md#1">9</a>&nbsp;&nbsp;<a href="https://github.com/synhl2788/djy/blob/master/gb/ncid278_10.md#1">10</a>&nbsp;&nbsp;<a href="https://github.com/synhl2788/djy/blob/master/gb/ncid278_4.md#1">下一页</a></h3></td></tr>
 </table><h4>手机上长按并复制下列链接或二维码分享本文章：</h4>https://github.com/synhl2788/djy/blob/master/gb/ncid278_3.md#1<br><a href="https://github.com/synhl2788/djy/blob/master/gb/ncid278_3.md#1"><img src="http://d1p1.ip.zn2.us/v.php?action=qrcode&url=https://github.com/synhl2788/djy/blob/master/gb/ncid278_3.md%231" title="分享本文章"></a><br>原文地址： <a href="http://www.epochtimes.com/gb/ncid278_3.htm">http://www.epochtimes.com/gb/ncid278_3.htm</a>    （国内需<a href="https://git.io/JesJV">下载翻墙软件</a>才能访问）</p>
