--- a/gb/ncid278_4.md
+++ b/gb/ncid278_4.md
@@ -39,7 +39,7 @@
 <tr><td><h3><a href="https://github.com/synhl2788/djy/blob/master/gb/19/12/6/n11706291.md#1" target="_blank">中共躲在防火墙后“放炮” 瞄准香港抗议者</a><br></h3><a href="https://github.com/synhl2788/djy/blob/master/gb/19/12/6/n11706291.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2016/04/161681431-1-150x120.jpg" align ="left"></a>香港民众民主抗争至今，除了用身躯抵挡橡皮弹、催泪弹外，西方媒体最近揭露，他们还必须用智慧抵抗中共发射的网络弹。网络专家表示，中共“大炮”正试图使连登（LIHKG）网站瘫痪，但不太可能成功。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月07日 6:52 AM							</td></tr>
 <tr><td><h3><a href="https://github.com/synhl2788/djy/blob/master/gb/19/12/6/n11706046.md#1" target="_blank">2021年全球监控摄像头达10亿 过半在中国</a><br></h3><a href="https://github.com/synhl2788/djy/blob/master/gb/19/12/6/n11706046.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/GettyImages-1166233093-150x120.jpg" align ="left"></a>一份新的报告显示，到2021年，全球将有数以10亿的摄像头在监视这个世界，其中一半以上位于中国。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月07日 3:58 AM							</td></tr>
 <tr><td><h3><a href="https://github.com/synhl2788/djy/blob/master/gb/19/12/6/n11705480.md#1" target="_blank">哈尔滨阿城区前政法委书记王云飞被举报</a><br></h3><a href="https://github.com/synhl2788/djy/blob/master/gb/19/12/6/n11705480.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/2015-7-16-minghui-dc-rally-02-150x120.jpg" align ="left"></a>曾任黑龙江省哈尔滨市阿城区政法委书记的王云飞，在任职期间对当地法轮功学员遭受的一切迫害负有主要责任，现已被举报到明慧网。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月07日 3:42 AM							</td></tr>
-<tr><td><h3><a href="https://github.com/synhl2788/djy/blob/master/gb/19/12/6/n11705987.md#1" target="_blank">中国开世界律师大会被讥讽 维权律师禁参与</a><br></h3><a href="https://github.com/synhl2788/djy/blob/master/gb/19/12/6/n11705987.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/01/111FotoJet_meitu_1-600x400-1-150x120.jpg" align ="left"></a>“世界律师大会”将于广州举行，但国内大部分律师都不批准出席，广州律协更要求当地的律师“噤声”，19个国际律师界团体呼吁中共释放所有因政治原因而被拘禁或监禁的律师。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月07日 1:04 AM							</td></tr>
+<tr><td><h3><a href="https://github.com/synhl2788/djy/blob/master/gb/19/12/10/n11713536.md#1" target="_blank">淄博公安局张南分局前610主任罗忠被举报</a><br></h3>山东淄博市公安局张南分局前“610”主任罗忠直接参与迫害当地至少几十名法轮功学员，现被举报到明慧网。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月11日 7:03 AM							</td></tr>
 <tr><td><h3><a href="https://github.com/synhl2788/djy/blob/master/gb/19/12/8/n11709028.md#1" target="_blank">了解法轮功真相 民众喝止男子行恶</a><br></h3>10月23日，大陆一城市的两位女性法轮功学员给人们发真相资料时，被一男子拍照、抢包。附近的几位路人冲过来喝止该男子的行为，帮了她们。恰巧其中的一位路人曾从一位学员那听过法轮功真相后得福报了。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月09日 4:06 AM							</td></tr>
 <tr><td><h3><a href="https://github.com/synhl2788/djy/blob/master/gb/ncid278_3.md#1">上一页</a>&nbsp;&nbsp;<a href="https://github.com/synhl2788/djy/blob/master/gb/ncid278.md#1">1</a>&nbsp;&nbsp;<a href="https://github.com/synhl2788/djy/blob/master/gb/ncid278_2.md#1">2</a>&nbsp;&nbsp;<a href="https://github.com/synhl2788/djy/blob/master/gb/ncid278_3.md#1">3</a>&nbsp;&nbsp;4&nbsp;&nbsp;<a href="https://github.com/synhl2788/djy/blob/master/gb/ncid278_5.md#1">5</a>&nbsp;&nbsp;<a href="https://github.com/synhl2788/djy/blob/master/gb/ncid278_6.md#1">6</a>&nbsp;&nbsp;<a href="https://github.com/synhl2788/djy/blob/master/gb/ncid278_7.md#1">7</a>&nbsp;&nbsp;<a href="https://github.com/synhl2788/djy/blob/master/gb/ncid278_8.md#1">8</a>&nbsp;&nbsp;<a href="https://github.com/synhl2788/djy/blob/master/gb/ncid278_9.md#1">9</a>&nbsp;&nbsp;<a href="https://github.com/synhl2788/djy/blob/master/gb/ncid278_10.md#1">10</a>&nbsp;&nbsp;<a href="https://github.com/synhl2788/djy/blob/master/gb/ncid278_5.md#1">下一页</a></h3></td></tr>
 </table><h4>手机上长按并复制下列链接或二维码分享本文章：</h4>https://github.com/synhl2788/djy/blob/master/gb/ncid278_4.md#1<br><a href="https://github.com/synhl2788/djy/blob/master/gb/ncid278_4.md#1"><img src="http://d1p1.ip.zn2.us/v.php?action=qrcode&url=https://github.com/synhl2788/djy/blob/master/gb/ncid278_4.md%231" title="分享本文章"></a><br>原文地址： <a href="http://www.epochtimes.com/gb/ncid278_4.htm">http://www.epochtimes.com/gb/ncid278_4.htm</a>    （国内需<a href="https://git.io/JesJV">下载翻墙软件</a>才能访问）</p>
