--- a/gb/nsc413_5.md
+++ b/gb/nsc413_5.md
@@ -1,4 +1,10 @@
 <a name="1" id="1" target="_blank">&nbsp;</a> <span id="1">&nbsp;</span><table border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/synhl2788/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/synhl2788/www/master/t/djy/1.jpg" title="大纪元"></a><a href="https://github.com/synhl2788/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/synhl2788/www/master/t/djy/3.jpg" title="国际新闻"></a><a href="https://github.com/synhl2788/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/synhl2788/www/master/t/djy/4.jpg" title="大陆新闻"></a><a href="https://github.com/synhl2788/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/synhl2788/www/master/t/djy/5.jpg" title="评论"></a><a href="https://github.com/synhl2788/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/synhl2788/www/master/t/djy/6.jpg" title="文化"></a><a href="https://github.com/synhl2788/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/synhl2788/www/master/t/djy/7.jpg" title="生活"></a><a href="https://github.com/synhl2788/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/synhl2788/www/master/t/djy/8.jpg" title="娱乐"></a><a href="https://github.com/synhl2788/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/synhl2788/www/master/t/djy/9.jpg" title="健康"><a href="https://www.youlucky.com"><img src="https://raw.githubusercontent.com/synhl2788/www/master/t/djy/10.jpg" title="购物"></a><a href="https://www.supportepoch.org/donation?utm_medium=epochtimes&utm_source=referral&utm_campaign=donate_button_djyhomepage"><img src="https://raw.githubusercontent.com/synhl2788/www/master/t/djy/12.jpg" title="捐款"></a></td></tr><tr><td colspan="2" VALIGN=TOP><p><a href="https://git.io/fjHxp" rel="nofollow">大纪元</a> | <a href="https://git.io/fjHxh" rel="nofollow">动态网</a> | <a href="https://git.io/fjHpv" rel="nofollow">神州</a> | <a href="https://git.io/fjHpJ" rel="nofollow">退党</a> | <a href="https://git.io/fjHpU" rel="nofollow">九评</a> | <a href="https://git.io/fjHpT" rel="nofollow">网门</a> | <a href="https://git.io/fjHpk" rel="nofollow">神韵</a> | <a href="https://git.io/fjHpI" rel="nofollow">新纪元</a> | <a href="https://git.io/fjHpL" rel="nofollow">看中国</a> | <a href="https://git.io/fjHpt" rel="nofollow">明慧网</a> | <a href="https://git.io/fjHpq" rel="nofollow">明慧十方</a> | <a href="https://git.io/fj9lQ" rel="nofollow">明慧焦点</a> | <a href="https://git.io/fjHpm" rel="nofollow">希望之声</a> | <a href="https://git.io/fjHpY" rel="nofollow">漫谈党文化</a ></p><p><a href="https://git.io/fjHpO" rel="nofollow">新唐人</a> | <a href="https://git.io/JervF" rel="nofollow">亚太台</a> | <a href="https://git.io/fjHpG" rel="nofollow">直播</a> | <a href="https://git.io/fj9lp" rel="nofollow">传奇</a> | <a href="https://git.io/fj9lX" rel="nofollow">神话</a> | <a href="https://git.io/fjHpZ" rel="nofollow">人生</a> | <a href="https://git.io/fjFNJ" rel="nofollow">伪火</a > | <a href="https://git.io/fjHpc" rel="nofollow">真相片</a> | <a href="https://git.io/fj9lK" rel="nofollow">藏字石</a> | <a href="https://git.io/fj9l5" rel="nofollow">短视频</a> | <a href="https://git.io/fjHpW" rel="nofollow">告诉未来</a > | <a href="https://git.io/fjHpl" rel="nofollow">终级目的</a> | <a href="https://git.io/fj9lM" rel="nofollow">中共活摘</a > | <a href="https://git.io/fjHp4" rel="nofollow">风雨天地行</a></p></td></tr><tr><td width="707"><h3><p><strong>大陆新闻</strong></p></h3></td><td VALIGN=TOP rowspan=50><a href="https://git.io/fj9l0" target="_blank"><img width="130" src="https://raw.githubusercontent.com/synhl2788/djy/master/gb/130/gudianwu.jpg" title="神韵古典舞技巧表演" alt="神韵古典舞技巧表演"></a><br><a href="https://git.io/fj9la" target="_blank"><img width="130" src="https://raw.githubusercontent.com/synhl2788/djy/master/gb/130/9ping.jpg" title="九评共产党" alt="九评共产党"></a><br><a href="https://git.io/fj9lr" target="_blank"><img width="130" src="https://raw.githubusercontent.com/synhl2788/djy/master/gb/130/communism.jpg" title="共产主义终极目的" alt="共产主义终极目的"></a><br><a href="https://git.io/fjFNJ" target="_blank"><img width="130" src="https://raw.githubusercontent.com/synhl2788/djy/master/gb/130/weihuo.jpg" title="中共的伪火骗局" alt="中共的伪火骗局"></a><br><a href="https://git.io/fj9lK" target="_blank"><img width="130" src="https://raw.githubusercontent.com/synhl2788/djy/master/gb/130/changzhi.jpg" title="古今奇观-藏字石" alt="古今奇观-藏字石"></a><br><a href="https://git.io/fj9lP" target="_blank"><img width="130" src="https://raw.githubusercontent.com/synhl2788/djy/master/gb/130/tianan.jpg" title="通往天安门的旅程" alt="通往天安门的旅程"></a><br><a href="https://git.io/fj9lX" target="_blank"><img width="130" src="https://raw.githubusercontent.com/synhl2788/djy/master/gb/130/weilai.jpg" title="未来人的神话" alt="未来人的神话"></a><br><a href="https://git.io/fj9l1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/synhl2788/djy/master/gb/130/ji-zy.jpg" title="中共罪恶的活摘" alt="中共罪恶的活摘"></a><br><a href="https://git.io/fj9lM" target="_blank"><img width="130" src="https://raw.githubusercontent.com/synhl2788/djy/master/gb/130/huozhai.jpg" title="铁证如山" alt="铁证如山"></a><br><a href="https://git.io/fj9lD" target="_blank"><img width="130" src="https://raw.githubusercontent.com/synhl2788/djy/master/gb/130/4ke.jpg" title="一家四口死于中共暴政" alt="一家四口死于中共暴政"></a><br><a href="https://git.io/fj9ly" target="_blank"><img width="130" src="https://raw.githubusercontent.com/synhl2788/djy/master/gb/130/jie-di.jpg" title="─弟妹相继死于中共迫害" alt="─弟妹相继死于中共迫害"></a><br><a href="https://git.io/fj9lS" target="_blank"><img width="130" src="https://raw.githubusercontent.com/synhl2788/djy/master/gb/130/ma-sj.jpg" title="她们许多已经被中共迫害至死" alt="她们许多已经被中共迫害至死"></a><br><a href="https://git.io/fj9l9" target="_blank"><img width="130" src="https://raw.githubusercontent.com/synhl2788/djy/master/gb/130/shuan-cxl.jpg" title="双城血泪" alt="双城血泪"></a><br><a href="https://git.io/fj9lH" target="_blank"><img width="130" src="https://raw.githubusercontent.com/synhl2788/djy/master/gb/130/wu-zbh.jpg" title="震撼人心的无罪辩护" alt="震撼人心的无罪辩护"></a><br><a href="https://git.io/fj9lQ" target="_blank"><img width="130" src="https://raw.githubusercontent.com/synhl2788/djy/master/gb/130/6c10-720.jpg" title="从610到720" alt="从610到720"></a><br><a href="https://git.io/fj9l7" target="_blank"><img width="130" src="https://raw.githubusercontent.com/synhl2788/djy/master/gb/130/xian-z.jpg" title="中共官员的选择" alt="中共官员的选择"></a><br><a href="https://git.io/fj9l5" target="_blank"><img width="130" src="https://raw.githubusercontent.com/synhl2788/djy/master/gb/130/1400l.jpg" title="剖析1400例" alt="剖析1400例"></a><br><a href="https://git.io/fj9lb" target="_blank"><img width="130" src="https://raw.githubusercontent.com/synhl2788/djy/master/gb/130/425.jpg" title="万人上访真相" alt="万人上访真相"></a><br><a href="https://git.io/fj9lN" target="_blank"><img width="130" src="https://raw.githubusercontent.com/synhl2788/djy/master/gb/130/qing-h.jpg" title="被中共迫害的清华学子" alt="被中共迫害的清华学子"></a><br><a href="https://git.io/fj9lx" target="_blank"><img width="130" src="https://raw.githubusercontent.com/synhl2788/djy/master/gb/130/jian-z513.jpg" title="见证513" alt="见证513"></a><br><a href="https://git.io/fj9lp" target="_blank"><img width="130" src="https://raw.githubusercontent.com/synhl2788/djy/master/gb/130/gongfu.jpg" title="功夫 寻道" alt="功夫 寻道"></a><br><a href="https://git.io/fj9lh" target="_blank"><img width="130" src="https://raw.githubusercontent.com/synhl2788/djy/master/gb/130/guangguimian.jpg" title="歌唱家人生奇迹" alt="歌唱家人生奇迹"></a><br><a href="https://git.io/fj9lj" target="_blank"><img width="130" src="https://raw.githubusercontent.com/synhl2788/djy/master/gb/130/ming-jjy.jpg" title="名校精英的选择" alt="名校精英的选择"></a><br><a href="https://git.io/fj98e" target="_blank"><img width="130" src="https://raw.githubusercontent.com/synhl2788/djy/master/gb/130/yin-lj.jpg" title="音乐之家的故事" alt="音乐之家的故事"></a><br><a href="https://git.io/fj98v" target="_blank"><img width="130" src="https://raw.githubusercontent.com/synhl2788/djy/master/gb/130/ming-hsf.jpg" title="平凡中的不平凡" alt="平凡中的不平凡"></a><br><a href="https://github.com/synhl2788/www/blob/master/README.md?dfh#9" target="_blank"><img width="130" src="https://raw.githubusercontent.com/synhl2788/djy/master/gb/130/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/synhl2788/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/synhl2788/djy/master/gb/130/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/synhl2788/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/synhl2788/djy/master/gb/130/huo-z3.jpg" title="警卫目击中共活摘"  alt="警卫目击中共活摘"></a><br><a href="https://github.com/synhl2788/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/synhl2788/djy/master/gb/130/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/synhl2788/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/synhl2788/djy/master/gb/130/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/synhl2788/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/synhl2788/djy/master/gb/130/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/synhl2788/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/synhl2788/djy/master/gb/130/st1.jpg" title="关注3亿人三退"  alt="关注3亿人三退"></a><br><a href="https://github.com/synhl2788/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/synhl2788/djy/master/gb/130/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/synhl2788/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/synhl2788/djy/master/gb/130/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/synhl2788/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/synhl2788/djy/master/gb/130/sj1.jpg" title="303万人举报江泽民"  alt="303万人举报江泽民"></a><br><a href="https://github.com/synhl2788/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/synhl2788/djy/master/gb/130/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/synhl2788/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/synhl2788/djy/master/gb/130/liangan.jpg" title="海峡两岸的强烈反差"  alt="海峡两岸的强烈反差"></a><br><a href="https://github.com/synhl2788/djy/blob/master/gb/15/5/5/n4427238.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/synhl2788/djy/master/gb/130/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/synhl2788/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/synhl2788/djy/master/gb/130/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/synhl2788/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/synhl2788/djy/master/gb/130/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/synhl2788/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/synhl2788/djy/master/gb/130/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/synhl2788/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/synhl2788/djy/master/gb/130/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/synhl2788/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/synhl2788/djy/master/gb/130/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/synhl2788/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/synhl2788/djy/master/gb/130/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/synhl2788/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/synhl2788/djy/master/gb/130/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/synhl2788/djy/blob/master/gb/9/10/15/n2689419.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/synhl2788/djy/master/gb/130/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/synhl2788/www/blob/master/README.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/synhl2788/djy/master/gb/130/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr>
+<tr><td><h3><a href="https://github.com/synhl2788/djy/blob/master/gb/19/12/19/n11733222.md#1" target="_blank">首轮入围名单公布 陆片《哪吒》无缘奥斯卡</a><br></h3><a href="https://github.com/synhl2788/djy/blob/master/gb/19/12/19/n11733222.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/GettyImages-1742696-1-150x120.jpg" align ="left"></a>美国电影艺术与科学学会日前公布第92届奥斯卡奖首轮入围名单。颇受关注的“最佳国际电影”方面，大陆选送的《哪吒之魔童降世》（以下简称《哪吒》）无缘下一轮。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月20日 7:59 AM							</td></tr>
+<tr><td><h3><a href="https://github.com/synhl2788/djy/blob/master/gb/19/12/19/n11733696.md#1" target="_blank">沈阳研究生遭同学砍断肌腱 报案3个月无果</a><br></h3><a href="https://github.com/synhl2788/djy/blob/master/gb/19/12/19/n11733696.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/222-150x120.jpg" align ="left"></a>因奖学金评定发生矛盾，沈阳大学一名在读硕士研究生遭多名同学捅伤，大腿肌腱被砍断，报案三个月无果，痛苦中无奈到网上发帖爆光，引发舆情关注后，警方方回应称正在抓捕犯罪嫌疑人。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月20日 7:50 AM							</td></tr>
+<tr><td><h3><a href="https://github.com/synhl2788/djy/blob/master/gb/19/12/19/n11733651.md#1" target="_blank">山西设禁煤区推煤改气 抢煤封炉 民怨沸腾</a><br></h3><a href="https://github.com/synhl2788/djy/blob/master/gb/19/12/19/n11733651.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2018/12/84ba374e317fd1b46d0d1b913852bbad-600x400-150x120.jpg" align ="left"></a>近年来，中共当局以“治霾”为由在多个省份设立禁煤区。山西省禁煤区内的农家炉台近日被当局统一封禁，官方强行收缴百姓家中煤炭，并用水泥将炉膛堵住，以禁止村民使用燃煤炉灶，导致当地民愤极大。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月20日 7:44 AM							</td></tr>
+<tr><td><h3><a href="https://github.com/synhl2788/djy/blob/master/gb/19/12/19/n11733412.md#1" target="_blank">从公益零分到连续获奖 范冰冰洒泪：好久不见</a><br></h3><a href="https://github.com/synhl2788/djy/blob/master/gb/19/12/19/n11733412.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/GettyImages-957419286-150x120.jpg" align ="left"></a>在去年中共官方发布的《中国影视明星社会责任研究报告》中，陷入逃税风波的范冰冰以零分排在中港两地百位明星艺人倒数第一。但随着中共喉舌一改口诛笔伐范冰冰“将公益活动作为挽救自己事业星途的‘洗白器’”的调门，范冰冰近日连续获得公益奖。面对如此不同的境遇，范冰冰不禁洒泪表示：“真的好久不见！”......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月20日 7:43 AM							</td></tr>
+<tr><td><h3><a href="https://github.com/synhl2788/djy/blob/master/gb/19/12/19/n11731502.md#1" target="_blank">四大原因 北京被迫同意第一阶段贸易协议</a><br></h3><a href="https://github.com/synhl2788/djy/blob/master/gb/19/12/19/n11731502.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/06/GettyImages-1152458129-600x400-1-150x120.jpg" align ="left"></a>美中贸易战开打逾一年半后，双方终于达成了第一阶段的贸易文本协议，等待双方代表签署。中共被指对此作出巨大让步，那么中共让步的背后原因是什么呢？......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月20日 5:06 AM							</td></tr>
+<tr><td><h3><a href="https://github.com/synhl2788/djy/blob/master/gb/19/12/19/n11733285.md#1" target="_blank">中共地方融资平台恐现违约“连锁反应”</a><br></h3><a href="https://github.com/synhl2788/djy/blob/master/gb/19/12/19/n11733285.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2017/12/economy-construction-tian-jing-GettyImages-474029480-150x120.jpg" align ="left"></a>12月19日有体制内人士提出，中共地方政府融资平台的债务违约可能发生“连锁反应”。国际金融界注意到中共地方政府融资平台已经出现违约危机，而且现已发债规模和债务到期规模都相当巨大。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月20日 3:57 AM							</td></tr>
 <tr><td><h3><a href="https://github.com/synhl2788/djy/blob/master/gb/19/12/19/n11733249.md#1" target="_blank">克鲁兹：弹劾案已崩溃 民主党阵脚大乱</a><br></h3><a href="https://github.com/synhl2788/djy/blob/master/gb/19/12/19/n11733249.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/000_1KI7GJ-150x120.jpg" align ="left"></a>在众议院投票通过指控川普（特朗普）总统“滥用权力”和“阻碍国会”弹劾条款的翌日，德克萨斯州共和党参议员特德·克鲁兹（Ted Cruz）向媒体表示，民主党人目前感到很焦虑，因为他们发起的弹劾案已经崩溃。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月20日 2:36 AM							</td></tr>
 <tr><td><h3><a href="https://github.com/synhl2788/djy/blob/master/gb/19/12/19/n11733304.md#1" target="_blank">锦州银行原董事长突离世 曾试图逃美被拦截</a><br></h3><a href="https://github.com/synhl2788/djy/blob/master/gb/19/12/19/n11733304.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/zhangwei_1-150x120.jpg" align ="left"></a>大陆财新网独家披露，掌控锦州银行多年并导致该行危机爆发的原董事长张伟，12月19日早晨突然去世。就在今年7月，张伟曾试图逃往美，在飞机起飞前一刻被拦截。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月20日 2:26 AM							</td></tr>
 <tr><td><h3><a href="https://github.com/synhl2788/djy/blob/master/gb/19/12/19/n11733234.md#1" target="_blank">姆钦：美中将于1月签第一阶段贸易协议</a><br></h3><a href="https://github.com/synhl2788/djy/blob/master/gb/19/12/19/n11733234.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/000_1N727I-150x120.jpg" align ="left"></a>周四（12月19日），美国财政部长史蒂芬·姆钦（Steven Mnuchin）表示，他对美中贸易谈判代表将在1月初签署“第一阶段”贸易协议毫不怀疑。中共商务部则说，中美正就第一阶段贸易协议的签署事宜保持联系。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月20日 2:10 AM							</td></tr>
@@ -14,11 +20,7 @@
 <tr><td><h3><a href="https://github.com/synhl2788/djy/blob/master/gb/19/12/19/n11731608.md#1" target="_blank">【拍案惊奇】弹劾案来龙去脉 罢免川普很难</a><br></h3><a href="https://github.com/synhl2788/djy/blob/master/gb/19/12/19/n11731608.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/15e1a21e1316d352_ttl7daySYx_bg1218-150x120.jpg" align ="left"></a>周三中午，美国众议院开始了弹劾川普的辩论，辩论预计持续6个小时，之后会对川普的两项弹劾条款投票。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月19日 1:40 PM							</td></tr>
 <tr><td><h3><a href="https://github.com/synhl2788/djy/blob/master/gb/19/12/18/n11731433.md#1" target="_blank">中共对企业补贴五年翻倍 美中谈判增难度</a><br></h3><a href="https://github.com/synhl2788/djy/blob/master/gb/19/12/18/n11731433.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2013/06/1306091240272519-150x120.jpg" align ="left"></a>中共对大陆企业的补贴从2013年至2018年间翻了一倍，而且今年还在增长，有观点认为，中共补贴会造成美中有关贸易谈判相关结构性改革陷入僵局。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月19日 12:57 PM							</td></tr>
 <tr><td><h3><a href="https://github.com/synhl2788/djy/blob/master/gb/19/12/19/n11731729.md#1" target="_blank">两渝访民遭拦截 北京随处可见警方查身份证</a><br></h3><a href="https://github.com/synhl2788/djy/blob/master/gb/19/12/19/n11731729.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/S__14024792-150x120.jpg" align ="left"></a>据在京访民提供消息，近日北京重要区域随处可见警察在查身份证。18日上午，重庆维权人士陈明玉和郭兴梅走在北京王府井大街上，被三名警察拦下检查身份证，后被送去王府井派出所，直到晚上8点半左右由重庆政府人员接到高家场46-3号。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月19日 11:42 AM							</td></tr>
-<tr><td><h3><a href="https://github.com/synhl2788/djy/blob/master/gb/19/12/19/n11731529.md#1" target="_blank">脆弱美中贸易协议凸显中共内部分裂</a><br></h3><a href="https://github.com/synhl2788/djy/blob/master/gb/19/12/19/n11731529.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/4d09fc2d8d66de2edc8e9aa7ad7cb72f-600x400-1-150x120.jpg" align ="left"></a>近期，美中双方达成了“第一阶段的贸易协议”。但中共大外宣及左派网站都在攻击或看衰这份贸易协议，凸显了中共内部分裂。外媒认为，这份协议脆弱的原因之一，是中共历来不遵守承诺。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月19日 10:37 AM							</td></tr>
-<tr><td><h3><a href="https://github.com/synhl2788/djy/blob/master/gb/19/12/19/n11731504.md#1" target="_blank">英国敦促北京与港人对话 兑现联合声明承诺</a><br></h3><a href="https://github.com/synhl2788/djy/blob/master/gb/19/12/19/n11731504.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/000_1LT8PG-150x120.jpg" align ="left"></a>当地时间周四（12月19日），英国政府发表一份声明，敦促中共当局与香港抗议者展开对话，并尊重中方于35年前在《中英联合声明》中所作的承诺。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月19日 9:42 AM							</td></tr>
-<tr><td><h3><a href="https://github.com/synhl2788/djy/blob/master/gb/19/12/18/n11731266.md#1" target="_blank">美媒：《中国日报》在美非法投放中共宣传物</a><br></h3><a href="https://github.com/synhl2788/djy/blob/master/gb/19/12/18/n11731266.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/GettyImages-51951054-600x400-150x120.jpg" align ="left"></a>熟悉美国外国代理人注册申请的专家指出，中共国家媒体《中国日报》（海外版，China Daily）没有遵守联邦法律，公开其在《纽约时报》、《华盛顿邮报》等美国报纸上的宣传费。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月19日 8:19 AM							</td></tr>
-<tr><td><h3><a href="https://github.com/synhl2788/djy/blob/master/gb/19/12/18/n11731081.md#1" target="_blank">分析：中国大陆银行挤兑增加 投资者担忧</a><br></h3><a href="https://github.com/synhl2788/djy/blob/master/gb/19/12/18/n11731081.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/GettyImages-1164771886-150x120.jpg" align ="left"></a>在坏帐激增的背景下，中共央行监管机构正以空前的速度接管或救助银行，同时迫使银行以越来越低的息差增加贷款。这可以使银行继续经营，但这并不是一个可持续的办法。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月19日 8:14 AM							</td></tr>
-<tr><td><h3><a href="https://github.com/synhl2788/djy/blob/master/gb/19/12/18/n11731327.md#1" target="_blank">陆房企开卖员工房 员工则担心工作不保</a><br></h3><a href="https://github.com/synhl2788/djy/blob/master/gb/19/12/18/n11731327.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2008/07/807060845362134-150x120.jpg" align ="left"></a>中国房地产相关企业的销售困境延伸至企业员工，最近曝出一些房企开始出售“员工房”，让员工消化库存房产，一些大型房企内部人事变动频繁，房企员工担心工作不保。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月19日 8:03 AM							</td></tr>
+<tr><td><h3><a href="https://github.com/synhl2788/djy/blob/master/gb/19/12/19/n11733354.md#1" target="_blank">两岸密使 叶选宁牵线台湾官员密会杨尚昆</a><br></h3>中共总政联络部前部长叶选宁、台湾总统府前资政曾永贤先后去世后，他们从1992年开始担任“两岸密使”的事实被证实。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月20日 6:52 AM							</td></tr>
 <tr><td><h3><a href="https://github.com/synhl2788/djy/blob/master/gb/19/12/19/n11733311.md#1" target="_blank">国际人权组织吁加拿大惩罚中共电视台</a><br></h3>总部位于香港和欧洲的人权组织“保障卫士（Safeguard Defenders）”向加拿大广播电视和电信委员会（CRTC）提出了投诉，并呼吁加拿大政府使用《腐败外国官员的受害者法》——加拿大版的《马格尼茨基法》，去惩罚那些负责广播这种认罪供词视频的人。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月20日 2:44 AM							</td></tr>
 <tr><td><h3><a href="https://github.com/synhl2788/djy/blob/master/gb/19/12/19/n11732974.md#1" target="_blank">告诉人真相 法轮功学员丁宝云面临非法庭审</a><br></h3>日前，山东济南仲宫镇法轮功学员丁宝云接到章丘区法院人员电话，让她去拿传票、开庭通知书和起诉书。章丘区法院欲在12月24日对丁宝云非法庭审。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月20日 12:36 AM							</td></tr>
 <tr><td><h3><a href="https://github.com/synhl2788/djy/blob/master/gb/19/12/19/n11731783.md#1" target="_blank">加拿大升级中国旅行警告：慎防中共随意执法</a><br></h3>12月18日，加拿大政府提升了去中国旅行的风险警告。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月20日 12:31 AM							</td></tr>
@@ -37,7 +39,5 @@
 
 澎.........<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月19日 12:29 PM							</td></tr>
 <tr><td><h3><a href="https://github.com/synhl2788/djy/blob/master/gb/19/12/19/n11731789.md#1" target="_blank">每日三退声明精选（2019/12/18）</a><br></h3>共产党的两大法宝就是笔杆子和枪杆子，笔杆子是用来骗人的同时用其歪理邪说对人进行毒害洗脑。枪杆子是用来杀人和维持其邪恶统治的。现在又多了一个钱袋子用来收买和腐蚀人。这就是共产邪党的主要伎俩。其所作所为充分证明其就是一个黑帮邪教。我们声明退出这个邪党，不与邪恶为伍。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月19日 11:35 AM							</td></tr>
-<tr><td><h3><a href="https://github.com/synhl2788/djy/blob/master/gb/19/12/19/n11731701.md#1" target="_blank">四川再发地震 今年至少14次地震</a><br></h3>继12月18日四川内江5.2发生地震后，19日凌晨，四川绵阳再发3级地震，震源深度10千米。今年四川频发地震，加上今次，发生至少14次地震，还有部分余震未算入。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月19日 11:02 AM							</td></tr>
-<tr><td><h3><a href="https://github.com/synhl2788/djy/blob/master/gb/19/12/19/n11731657.md#1" target="_blank">清华大学90后共青团官员校内溺亡</a><br></h3>日前，90后的清华大学团委科创中心主任朱某（朱小亮）在校园内坠河身亡的消息，引发外界关注。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月19日 10:42 AM							</td></tr>
 <tr><td><h3><a href="https://github.com/synhl2788/djy/blob/master/gb/nsc413_4.md#1">上一页</a>&nbsp;&nbsp;<a href="https://github.com/synhl2788/djy/blob/master/gb/nsc413.md#1">1</a>&nbsp;&nbsp;<a href="https://github.com/synhl2788/djy/blob/master/gb/nsc413_2.md#1">2</a>&nbsp;&nbsp;<a href="https://github.com/synhl2788/djy/blob/master/gb/nsc413_3.md#1">3</a>&nbsp;&nbsp;<a href="https://github.com/synhl2788/djy/blob/master/gb/nsc413_4.md#1">4</a>&nbsp;&nbsp;5&nbsp;&nbsp;<a href="https://github.com/synhl2788/djy/blob/master/gb/nsc413_6.md#1">6</a>&nbsp;&nbsp;<a href="https://github.com/synhl2788/djy/blob/master/gb/nsc413_7.md#1">7</a>&nbsp;&nbsp;<a href="https://github.com/synhl2788/djy/blob/master/gb/nsc413_8.md#1">8</a>&nbsp;&nbsp;<a href="https://github.com/synhl2788/djy/blob/master/gb/nsc413_9.md#1">9</a>&nbsp;&nbsp;<a href="https://github.com/synhl2788/djy/blob/master/gb/nsc413_10.md#1">10</a>&nbsp;&nbsp;<a href="https://github.com/synhl2788/djy/blob/master/gb/nsc413_6.md#1">下一页</a></h3></td></tr>
 </table><h4>手机上长按并复制下列链接或二维码分享本文章：</h4>https://github.com/synhl2788/djy/blob/master/gb/nsc413_5.md#1<br><a href="https://github.com/synhl2788/djy/blob/master/gb/nsc413_5.md#1"><img src="http://d1p1.ip.zn2.us/v.php?action=qrcode&url=https://github.com/synhl2788/djy/blob/master/gb/nsc413_5.md%231" title="分享本文章"></a><br>原文地址： <a href="http://www.epochtimes.com/gb/nsc413_5.htm">http://www.epochtimes.com/gb/nsc413_5.htm</a>    （国内需<a href="https://git.io/JesJV">下载翻墙软件</a>才能访问）</p>
