--- a/gb/news2008_2.md
+++ b/gb/news2008_2.md
@@ -36,19 +36,6 @@
 <tr><td><h3><a href="https://github.com/synhl2788/djy/blob/master/gb/19/12/16/n11726317.md#1" target="_blank">“银色海啸”为加州住房危机带来解药？</a><br></h3><a href="https://github.com/synhl2788/djy/blob/master/gb/19/12/16/n11726317.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/15dfdec6ab2a97bc_ttl7dayrUn_shutterstock_1039455271-150x120.jpg" align ="left"></a>近期线上房地产数据公司Zillow释出一份研究指称，未来20年中（截至2037年），美国婴儿潮世代的银发族们，将持续释出约2100万套空房，数量堪比2000年代中期的上市量。听起来似乎能缓解自经济复苏以来，全美越来越紧张的住房需求。难道这也是加州，乃至旧金山湾区住房危机的一剂解药吗？
 迎来“银色海啸”
 那么2100.........<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月16日 11:54 PM			</td></tr>
-<tr><td><h3><a href="https://github.com/synhl2788/djy/blob/master/gb/19/12/16/n11725598.md#1" target="_blank">2019旧金山湾区房价 11月份销售一览（下）</a><br></h3><a href="https://github.com/synhl2788/djy/blob/master/gb/19/12/16/n11725598.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/1fa8803c75590c0b3f4bf47e70560039-150x120.png" align ="left"></a>以下表格即是2019年11月份，湾区部分城市的房产销售一览。
-注：房型CO是康斗，DE是独立房
-
-
-
-
-
-
-
-
-
-资料来源：旧金山、南湾、东湾MLS
-以上数据由星河地产（Starriver Realty）房地产经纪Jason（Zhenhua）Tao（BRE：01869132）提供
-Jason .........<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月16日 11:06 PM			</td></tr>
+<tr><td><h3><a href="https://github.com/synhl2788/djy/blob/master/gb/19/12/19/n11732455.md#1" target="_blank">快餐不利健康 鹿特丹拟限制店家数量</a><br></h3>为了对抗肥胖，减少肥胖人口比例，帮助当地居民改善健康状况，荷兰鹿特丹市政府拟对本市快餐店的数量进行限制，重点限制范围是城市中心区域。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月19日 4:39 PM			</td></tr>
 <tr><td><h3><a href="https://github.com/synhl2788/djy/blob/master/gb/news2008.md#1">上一页</a>&nbsp;&nbsp;<a href="https://github.com/synhl2788/djy/blob/master/gb/news2008.md#1">1</a>&nbsp;&nbsp;2&nbsp;&nbsp;<a href="https://github.com/synhl2788/djy/blob/master/gb/news2008_3.md#1">3</a>&nbsp;&nbsp;<a href="https://github.com/synhl2788/djy/blob/master/gb/news2008_4.md#1">4</a>&nbsp;&nbsp;<a href="https://github.com/synhl2788/djy/blob/master/gb/news2008_5.md#1">5</a>&nbsp;&nbsp;<a href="https://github.com/synhl2788/djy/blob/master/gb/news2008_6.md#1">6</a>&nbsp;&nbsp;<a href="https://github.com/synhl2788/djy/blob/master/gb/news2008_7.md#1">7</a>&nbsp;&nbsp;<a href="https://github.com/synhl2788/djy/blob/master/gb/news2008_8.md#1">8</a>&nbsp;&nbsp;<a href="https://github.com/synhl2788/djy/blob/master/gb/news2008_9.md#1">9</a>&nbsp;&nbsp;<a href="https://github.com/synhl2788/djy/blob/master/gb/news2008_10.md#1">10</a>&nbsp;&nbsp;<a href="https://github.com/synhl2788/djy/blob/master/gb/news2008_3.md#1">下一页</a></h3></td></tr>
 </table><h4>手机上长按并复制下列链接或二维码分享本文章：</h4>https://github.com/synhl2788/djy/blob/master/gb/news2008_2.md#1<br><a href="https://github.com/synhl2788/djy/blob/master/gb/news2008_2.md#1"><img src="http://d1p1.ip.zn2.us/v.php?action=qrcode&url=https://github.com/synhl2788/djy/blob/master/gb/news2008_2.md%231" title="分享本文章"></a><br>原文地址： <a href="http://www.epochtimes.com/gb/news2008_2.htm">http://www.epochtimes.com/gb/news2008_2.htm</a>    （国内需<a href="https://git.io/JesJV">下载翻墙软件</a>才能访问）</p>
